Bug 9683: Implement select.options.remove() method
WebCore:

        Bug 9683: Implement select.options.remove() method
        <http://bugs.webkit.org/show_bug.cgi?id=9683>

        Reviewed by Maciej.

        Implement select.options.remove() by calling select.remove()
        with the same arguments.  This is what MSIE 7 does, although its
        select.remove() method differs from WebKit's by throwing an
        exception when called with no arguments or with a negative
        integer argument.  Note that the DOM Level 1 documentation
        specifies that select.remove() does not throw an exception.

        Tests: fast/js/select-options-remove-gc.html
               fast/js/select-options-remove.html

        * bindings/js/JSHTMLOptionsCollectionCustom.cpp:
        (WebCore::JSHTMLOptionsCollection::remove): Added.
        * html/HTMLOptionsCollection.cpp:
        (WebCore::HTMLOptionsCollection::remove): Added.
        * html/HTMLOptionsCollection.h:
        * html/HTMLOptionsCollection.idl:

LayoutTests:

        Bug 9683: Implement select.options.remove() method
        <http://bugs.webkit.org/show_bug.cgi?id=9683>

        Reviewed by Maciej.

        * fast/js/resources/select-options-remove.js: Added.
        * fast/js/select-options-remove-expected.txt: Added.
        * fast/js/select-options-remove-gc-expected.txt: Added.
        * fast/js/select-options-remove-gc.html: Added.
        * fast/js/select-options-remove.html: Added.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28584 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-12-10  David D. Kilzer  <ddkilzer@webkit.org>
+
+        Bug 9683: Implement select.options.remove() method
+        <http://bugs.webkit.org/show_bug.cgi?id=9683>
+
+        Reviewed by Maciej.
+
+        * fast/js/resources/select-options-remove.js: Added.
+        * fast/js/select-options-remove-expected.txt: Added.
+        * fast/js/select-options-remove-gc-expected.txt: Added.
+        * fast/js/select-options-remove-gc.html: Added.
+        * fast/js/select-options-remove.html: Added.
+
 2007-12-10  Alexey Proskuryakov  <ap@webkit.org>
 
         Removed fast/events/objc-keyboard-event-creation.html from skipped list, as this test has
