Reviewed by Niko.
        http://bugs.webkit.org/show_bug.cgi?id=16163
        SVG crash in Node::setChanged() on Debug builds only (trashed parent)

        Fix the crash by properly unregistering as client from SVGResource
        when deleting a styled svg node.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28587 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-12-09  Rob Buis  <buis@kde.org>
+
+        Reviewed by Niko.
+
+        Testcase for:
+        http://bugs.webkit.org/show_bug.cgi?id=16163
+        SVG crash in Node::setChanged() on Debug builds only (trashed parent)
+
+        * svg/custom/resource-client-removal-expected.checksum: Added.
+        * svg/custom/resource-client-removal-expected.png: Added.
+        * svg/custom/resource-client-removal-expected.txt: Added.
+        * svg/custom/resource-client-removal.svg: Added.
+
 2007-12-10  David D. Kilzer  <ddkilzer@webkit.org>
 
         Bug 9683: Implement select.options.remove() method
