Check in correct results
        * svg/custom/resource-client-removal-expected.txt:

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28590 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-10  Stephanie  <slewis@apple.com>
+
+        Rubber-stamped by Sam.
+   
+        Check in correct results
+
+        * svg/custom/resource-client-removal-expected.txt:
+
 2007-12-10  Rob Buis  <buis@kde.org>
 
         Reviewed by Darin.
