--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-05-25  Konstantin Tokarev  <annulen@yandex.ru>
+
+        [cmake] Deduplicate make-js-file-arrays usage and make it work on Windows.
+        https://bugs.webkit.org/show_bug.cgi?id=157997
+
+        Reviewed by Alex Christensen.
+
+        * Source/cmake/WebKitMacros.cmake: Added MAKE_JS_FILE_ARRAYS macro.
+
 2016-04-13  Konstantin Tokarev  <annulen@yandex.ru>
 
         FindWebP should not be misguided by pkg-config when cross-compiling.
